# keep-my-job-app

./: .gitignore  LICENSE  README.md
adk/: .env.ollama.sample  .env.sample  README.md  callback_logging.py  requirements.txt
adk/local_artifact/: agent.py
adk/mermaid/: agent.py
adk/poc_c4/: agent.py
adk/poc_c4_simplified/: agent.py  tools.py
adk/solution_design/: agent.py  tools.py
adk/test/: agent.py
app/: main.py  pyproject.toml  setup.py
app/adk/: .env.gemini.sample
app/adk/solution_design/: agent.py
app/adk/solution_design/sub_agents/c4_team/: __init__.py  tools.py
app/adk/solution_design/sub_agents/solution_architecture_team/: __init__.py  agent.py
app/shared/: callbacks.py  model.py  utils.py
data/problems/: agentic.txt
data/proposed_solutions/: 2024-01-01__1-txt__Shared-Enterprise-Platform-Architecture-Proposal-Revised.md  2024-07-30__1__shared-enterprise-platform-architecture.md  202602092022__1-txt__enterprise-event-notification-platform-revised.md  202602101312__agentic-txt__Solution-Architecture-Document-Enterprise-Agentic-AI-Platform-on-GCP-Revised.md
doc/svg/: README.md  formatter.html  svg.html
doc/svg-generator/: README.md  app.html  svg.html
python/: requirements.txt
python/adk/: .env.ollama.sample  proxy_mermaid.py  requirements.txt
python/adk/local_artifact/: agent.py
python/adk/poc_a/: agent.py
python/adk/poc_c4/: agent.py
python/adk/poc_c4_simplified/: agent.py  callbacks.py  tools.py
python/adk/poc_disable_thinking/: agent.py
python/adk/poc_ollama/: agent.py
python/shared/: callbacks.py  model.py
(+12 files in other folders)
